--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/11.4.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/11.4.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/11.4.0/firebase-storage.js"></script>
     
     <script src="script.js"></script>
 </body>
